Bug 162979 - Automatic Update stanza of the Tools -> Options -> Online Update panel does not fully show in UI
Summary: Automatic Update stanza of the Tools -> Options -> Online Update panel does n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
: 159960 (view as bug list)
Depends on:
Blocks: Automatic-Updater
  Show dependency treegraph
 
Reported: 2024-09-15 20:49 UTC by Alan Goodkin
Modified: 2025-01-13 16:12 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of initial Options window with lowest content invisible (44.89 KB, image/png)
2024-09-15 20:55 UTC, Alan Goodkin
Details
Screenshot of initial Options window with lowest content half visible (43.01 KB, image/png)
2024-09-15 20:56 UTC, Alan Goodkin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Goodkin 2024-09-15 20:49:16 UTC
Description:
When opening Options, the window defaults to its smallest window size. The display of Online Update options exceeds the screen height, so the Automatic Update option might not appear, with no indication to the user that this option exists.

Steps to Reproduce:
1.Select Tools|Options|Libre Office|Online Update
2.
3.

Actual Results:
If the User Agent "Send OS version and basic hardware information" option has already been selected in a previous session, the Automatic Update option is not visible, with no indication that it is available.

If the User Agent "Send OS version and basic hardware information" option had not previously been selected, the option is only half visible (this might be to do with my Windows display settings, but could differ for other users).

Expected Results:
Either automatically expand the window to display all the contents, or display a scroll bar.


Reproducible: Sometimes


User Profile Reset: Yes

Additional Info:
Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 87fa9aec1a63e70835390b81c40bb8993f1d4ff6
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 1 m_a_riosv 2024-09-15 20:53:16 UTC
Can you attach the screenshot of the issue?
Comment 2 Alan Goodkin 2024-09-15 20:55:25 UTC
Created attachment 196460 [details]
Screenshot of initial Options window with lowest content invisible
Comment 3 Alan Goodkin 2024-09-15 20:56:08 UTC
Created attachment 196461 [details]
Screenshot of initial Options window with lowest content half visible
Comment 4 m_a_riosv 2024-09-16 01:01:51 UTC
Please, what is screen resolution?
Comment 5 Alan Goodkin 2024-09-16 10:26:00 UTC
Screen resolution is 1920x1080.

Scale is set to 125%. Even when I set the scale to 100%, if I close LO and reopen Options, the display of the first screenshot above is the same, although the half-hidden line in the second screenshot is now visible.

I suppose a quick fix would be to move Automatic Update above User Agent, but this doesn't solve the generic problem if some other Option group were to be expanded in the future.
Comment 6 m_a_riosv 2024-09-16 14:25:18 UTC
I think you know, that the window is resizable.
Comment 7 V Stuart Foote 2024-09-16 16:58:55 UTC
Confirmed on 24.8.1.1 and 24.2.0.3 builds.

Issue is the vertical size of the optonlineupdatepage.ui page, where addition [1][2] of a stanza on panel 'Automatic Updates' to hold the MAR based 'Enable automatic update' checkbox did not also expand the panel.

Seems fixed on current master against 25.2.0

@Heiko, did something with the vertical tab layout work tweak this at 25.2?
 
=-ref-=
[1] https://gerrit.libreoffice.org/c/core/+/160430
[2] https://gerrit.libreoffice.org/c/core/+/160830
Comment 8 Heiko Tietze 2024-09-17 07:39:17 UTC
Proposal for redesign in bug 158657. 

I wonder why the user data string has line breaks after each information.
Comment 9 Heiko Tietze 2024-09-17 09:57:47 UTC
Send a patch to Jenkins that breaks the user agent line at the semicolon but only after at least 50 chars.
Comment 10 Commit Notification 2024-09-24 05:25:14 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/74e3f47723471f3ed4dc2dbffc95085bb04d9504

Resolves tdf#162979 - Avoid oversized online update options

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-09-28 05:33:09 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/43e6279e8f747b5e1c2d59a8794742c9843f05a8

Resolves tdf#162979 - Avoid oversized online update options

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 V Stuart Foote 2024-10-04 18:56:15 UTC
@Heiko, maybe take another look at this. Getting an unexpected vertical expansion of the panel when the 'User agent - Send OS version and basic hardware information' check box is enabled. Single lines of info, and the enable automatic updates check box is again hidden off panel.

Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 13 Heiko Tietze 2024-10-17 14:26:03 UTC
(In reply to V Stuart Foote from comment #12)
> @Heiko, maybe take another look at this.

*facepalm* (/n vs. \n)
Comment 14 Commit Notification 2024-10-18 00:53:59 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/608353f563fa1a692f118cf3e4aab649269b43a8

Relates tdf#162979 - Fix typo

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-10-18 08:00:24 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/1c9ef56790a6abc8475fa817f5ea4d288480c76f

Relates tdf#162979 - Fix typo

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Alan Goodkin 2024-10-21 20:33:22 UTC
Now works for me on daily build.
Thanks

Version: 24.8.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 2a700af795fc57876379802744a3f0707f8f592d
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 17 Gabor Kelemen (Collabora) 2025-01-13 16:12:20 UTC
*** Bug 159960 has been marked as a duplicate of this bug. ***