Resolves tdf#162979 - Avoid oversized online update options

Don't wrap at every semicolon but only after 50 chars

Change-Id: I91993d503c574a9c60d390afde159ade73567861
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173552
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
(cherry picked from commit 74e3f47723471f3ed4dc2dbffc95085bb04d9504)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173913
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>